correction of import command

--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -6,6 +6,7 @@
 
 /* Common - Layout ==================================================================== */
 @import "typography";
+@import "mixins";
 
 /* General ============================================================================ */
 body {
